# Neurolens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example_bench.yaml  storage.example.yaml
devlog/: 2025-10-19.md
docs/: architecture_overview.md  bench_guide.md  cookbook.md  export_guide.md  metrics_glossary.md  quickstart.md  rules_guide.md  spec.md  storage_guide.md  visualization_guide.md
golden/: fp_minimal.json  tiny_linear_onnxrt.json  tiny_linear_torch.json
jsonschema/: __init__.py  exceptions.py
neurolens/: __init__.py
neurolens/adapters/: __init__.py  base.py  onnxrt_adapter.py  tensorrt_adapter.py  torch_adapter.py
neurolens/bench/: __init__.py  env.py  run_matrix.py  summarise.py
neurolens/cli/: __init__.py  bench.py  compare.py  export.py  fingerprint.py  ingest.py  ls.py  main.py  profile.py  report.py  view.py
neurolens/core/: __init__.py  profiler.py
neurolens/exporter/: __init__.py  bundle.py
neurolens/fingerprint/: __init__.py  builder.py  similarity.py
neurolens/insights/: __init__.py  engine.py  rules.yaml
neurolens/insights/templates/: report.html.j2  report.md.j2
neurolens/storage/: __init__.py  manifest.py  store.py
neurolens/utils/: __init__.py  env.py  io.py  mathx.py  validate.py
neurolens/viz/: __init__.py  dashboard.py  diffview.py  roofline.py  timeline.py
samples/: trace_minimal.json
samples/models/: README.md
schema/: run.schema.json
tests/: conftest.py  helpers.py  test_adapters_golden_trace.py  test_adapters_schema_parity.py  test_bench_env.py  test_bench_matrix.py  test_compare_cli.py  test_export_bundle.py  test_fingerprint_build.py  test_fingerprint_similarity.py  test_insights_engine_unit.py  test_profiler_basic.py  test_profiler_summary.py  test_report_render_html.py  test_report_render_md.py  test_schema_validation.py  test_store_query.py  test_store_write_read.py  test_viz_diff_alignment.py  test_viz_roofline_math.py  test_viz_smoke.py
tools/: gen_add_onnx.py  gen_tiny_linear.py
